Colaboratory를 통해 생성됨

--- a/5_RegularExpression_Revised.ipynb
+++ b/5_RegularExpression_Revised.ipynb
@@ -1913,11 +1913,11 @@
         "    print(\"Match:\", i)"
       ],
       "metadata": {
-        "id": "2eNfYoDo2dNM",
-        "outputId": "40d00f31-16e1-41c4-e6a2-53a05670d259",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2eNfYoDo2dNM",
+        "outputId": "40d00f31-16e1-41c4-e6a2-53a05670d259"
       },
       "execution_count": 1,
       "outputs": [
@@ -1984,28 +1984,25 @@
         "text=\"it cost me $715.45 and more.\"\n",
         "\n",
         "pattern1 = r\"more.$\"\n",
-        "\n",
         "matches1 = re.findall(pattern1, text)\n",
         "\n",
         "for i in matches1:\n",
         "  print(\"Match1:\", i)\n",
         "\n",
-        "\n",
         "pattern2 = r\"\\$*7\"\n",
-        "\n",
         "matches2 = re.findall(pattern2, text)\n",
         "\n",
         "for i in matches2:\n",
         "  print(\"Match2\", i)\n"
       ],
       "metadata": {
-        "id": "nzjw-HjB3oDs",
-        "outputId": "dbcc6e8c-ba92-4c42-982e-3c10bf51d615",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nzjw-HjB3oDs",
+        "outputId": "3c3582c7-0625-40ef-c3d5-cebbabfac912"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -2095,6 +2092,37 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"Hello, world.\\n This is test #5.\"\n",
+        "pattern = r\"\\.\"\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "4vVrWxSS5P30",
+        "outputId": "a28f0885-c6e9-48ed-ff3b-16366f0c44b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: .\n",
+            "Match: .\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#21.a 💣💊 COMPARE. The following example is more advanced from #1.\n",
         "\n",
         "import re\n",
@@ -2120,6 +2148,70 @@
         }
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: H\n",
+            "Match: e\n",
+            "Match: l\n",
+            "Match: l\n",
+            "Match: o\n",
+            "Match: ,\n",
+            "Match:  \n",
+            "Match: w\n",
+            "Match: o\n",
+            "Match: r\n",
+            "Match: l\n",
+            "Match: d\n",
+            "Match: .\n",
+            "Match:  \n",
+            "Match: T\n",
+            "Match: h\n",
+            "Match: i\n",
+            "Match: s\n",
+            "Match:  \n",
+            "Match: i\n",
+            "Match: s\n",
+            "Match:  \n",
+            "Match: t\n",
+            "Match: e\n",
+            "Match: s\n",
+            "Match: t\n",
+            "Match:  \n",
+            "Match: #\n",
+            "Match: 5\n",
+            "Match: .\n",
+            "Match: ['H', 'e', 'l', 'l', 'o', ',', ' ', 'w', 'o', 'r', 'l', 'd', '.', ' ', 'T', 'h', 'i', 's', ' ', 'i', 's', ' ', 't', 'e', 's', 't', ' ', '#', '5', '.']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"Hello, world.\\n This is test #5.\"\n",
+        "pattern = r\".\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)\n",
+        "\n",
+        "\n",
+        "print(\"Match:\", matches)"
+      ],
+      "metadata": {
+        "id": "l4dF9w0R5p2M",
+        "outputId": "06b45dd0-1e27-4b73-85ea-11442aa78f39",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -2201,6 +2293,40 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"The price is $100.\"\n",
+        "pattern = r\"\\$\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)\n",
+        "\n",
+        "print(\"Match:\", matches)"
+      ],
+      "metadata": {
+        "id": "bPvIW7z46pDP",
+        "outputId": "5594e528-7e73-4bdc-d2a3-d4ecbabbbd92",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: $\n",
+            "Match: ['$']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# 23. \\d 예시\n",
         "\n",
         "import re\n",
@@ -2224,6 +2350,42 @@
         "outputId": "d22bc78c-147a-4ebc-c3b4-faf5865a1a85"
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: 1\n",
+            "Match: 0\n",
+            "Match: 0\n",
+            "Match: ['1', '0', '0']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"The price is $100.\"\n",
+        "pattern = r\"\\d\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "  print(\"Match:\", i)\n",
+        "\n",
+        "print(\"Match:\", matches)"
+      ],
+      "metadata": {
+        "id": "ZTzfBCxA7uvZ",
+        "outputId": "e309f590-07d8-4df0-c604-1a673d92f268",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -2266,6 +2428,40 @@
         "outputId": "17f54b56-ac42-40c9-f373-8b0a15f1cbe1"
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: 100\n",
+            "Match: ['100']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"The price is $100.\"\n",
+        "pattern = r\"\\d+\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)\n",
+        "\n",
+        "print(\"Match:\", matches)"
+      ],
+      "metadata": {
+        "id": "HJQLvMKq8a9T",
+        "outputId": "5c988b7a-46cc-4a79-918b-e0e202c5e106",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
