Colaboratory를 통해 생성됨

--- a/5_RegularExpression_Revised.ipynb
+++ b/5_RegularExpression_Revised.ipynb
@@ -2102,11 +2102,11 @@
         "    print(\"Match:\", i)"
       ],
       "metadata": {
-        "id": "4vVrWxSS5P30",
-        "outputId": "a28f0885-c6e9-48ed-ff3b-16366f0c44b8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4vVrWxSS5P30",
+        "outputId": "a28f0885-c6e9-48ed-ff3b-16366f0c44b8"
       },
       "execution_count": 4,
       "outputs": [
@@ -2205,11 +2205,11 @@
         "print(\"Match:\", matches)"
       ],
       "metadata": {
-        "id": "l4dF9w0R5p2M",
-        "outputId": "06b45dd0-1e27-4b73-85ea-11442aa78f39",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "l4dF9w0R5p2M",
+        "outputId": "06b45dd0-1e27-4b73-85ea-11442aa78f39"
       },
       "execution_count": 5,
       "outputs": [
@@ -2306,11 +2306,11 @@
         "print(\"Match:\", matches)"
       ],
       "metadata": {
-        "id": "bPvIW7z46pDP",
-        "outputId": "5594e528-7e73-4bdc-d2a3-d4ecbabbbd92",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bPvIW7z46pDP",
+        "outputId": "5594e528-7e73-4bdc-d2a3-d4ecbabbbd92"
       },
       "execution_count": 6,
       "outputs": [
@@ -2379,11 +2379,11 @@
         "print(\"Match:\", matches)"
       ],
       "metadata": {
-        "id": "ZTzfBCxA7uvZ",
-        "outputId": "e309f590-07d8-4df0-c604-1a673d92f268",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ZTzfBCxA7uvZ",
+        "outputId": "e309f590-07d8-4df0-c604-1a673d92f268"
       },
       "execution_count": 7,
       "outputs": [
@@ -2455,11 +2455,11 @@
         "print(\"Match:\", matches)"
       ],
       "metadata": {
-        "id": "HJQLvMKq8a9T",
-        "outputId": "5c988b7a-46cc-4a79-918b-e0e202c5e106",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HJQLvMKq8a9T",
+        "outputId": "5c988b7a-46cc-4a79-918b-e0e202c5e106"
       },
       "execution_count": 8,
       "outputs": [
@@ -2527,6 +2527,54 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"The price is $100.\"\n",
+        "pattern = r\"\\D\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)\n",
+        "\n",
+        "print(\"Match:\", matches)"
+      ],
+      "metadata": {
+        "id": "-cRn270689KZ",
+        "outputId": "2b71865a-e177-48ba-ffd0-6bbe2c29a6c3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: T\n",
+            "Match: h\n",
+            "Match: e\n",
+            "Match:  \n",
+            "Match: p\n",
+            "Match: r\n",
+            "Match: i\n",
+            "Match: c\n",
+            "Match: e\n",
+            "Match:  \n",
+            "Match: i\n",
+            "Match: s\n",
+            "Match:  \n",
+            "Match: $\n",
+            "Match: .\n",
+            "Match: ['T', 'h', 'e', ' ', 'p', 'r', 'i', 'c', 'e', ' ', 'i', 's', ' ', '$', '.']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# 25. \\s 예시\n",
         "\n",
         "import re\n",
@@ -2566,6 +2614,42 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"Hello   World\"\n",
+        "pattern = r\"\\s\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for match in matches:\n",
+        "    print(\"Match:\", match)\n",
+        "\n",
+        "print(\"Match:\", matches)"
+      ],
+      "metadata": {
+        "id": "1XrPSVej-fFg",
+        "outputId": "fdd411d1-23af-4509-932a-e7ec9b9ff901",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match:  \n",
+            "Match:  \n",
+            "Match:  \n",
+            "Match: [' ', ' ', ' ']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#26.\\S 예시\n",
         "import re\n",
         "\n",
@@ -2588,6 +2672,49 @@
         "outputId": "4121159a-9057-45b6-9a45-b0f1c80a7b3c"
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: H\n",
+            "Match: e\n",
+            "Match: l\n",
+            "Match: l\n",
+            "Match: o\n",
+            "Match: W\n",
+            "Match: o\n",
+            "Match: r\n",
+            "Match: l\n",
+            "Match: d\n",
+            "Match: ['H', 'e', 'l', 'l', 'o', 'W', 'o', 'r', 'l', 'd']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"Hello   World\"\n",
+        "pattern = r\"\\S\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for match in matches:\n",
+        "    print(\"Match:\", match)\n",
+        "\n",
+        "print(\"Match:\", matches)"
+      ],
+      "metadata": {
+        "id": "TgjzmuGt-jR4",
+        "outputId": "841ea868-13aa-4339-f961-461db4a1b1fb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -2677,6 +2804,70 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"Python is _awesome_! It is 100% perfect!\"\n",
+        "pattern = r\"\\w\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for match in matches:\n",
+        "    print(\"Match:\", match)\n",
+        "\n",
+        "print(\"Match:\", matches)"
+      ],
+      "metadata": {
+        "id": "VTC_aZ_--nV3",
+        "outputId": "72b67f3d-fa78-4b67-b68e-9f648ef7de3b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: P\n",
+            "Match: y\n",
+            "Match: t\n",
+            "Match: h\n",
+            "Match: o\n",
+            "Match: n\n",
+            "Match: i\n",
+            "Match: s\n",
+            "Match: _\n",
+            "Match: a\n",
+            "Match: w\n",
+            "Match: e\n",
+            "Match: s\n",
+            "Match: o\n",
+            "Match: m\n",
+            "Match: e\n",
+            "Match: _\n",
+            "Match: I\n",
+            "Match: t\n",
+            "Match: i\n",
+            "Match: s\n",
+            "Match: 1\n",
+            "Match: 0\n",
+            "Match: 0\n",
+            "Match: p\n",
+            "Match: e\n",
+            "Match: r\n",
+            "Match: f\n",
+            "Match: e\n",
+            "Match: c\n",
+            "Match: t\n",
+            "Match: ['P', 'y', 't', 'h', 'o', 'n', 'i', 's', '_', 'a', 'w', 'e', 's', 'o', 'm', 'e', '_', 'I', 't', 'i', 's', '1', '0', '0', 'p', 'e', 'r', 'f', 'e', 'c', 't']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#28. \\w+ 예시\n",
         "\n",
         "import re\n",
@@ -2720,6 +2911,46 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"Python is _awesome_! It is 100% perfect\"\n",
+        "pattern = r\"\\w+\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for match in matches:\n",
+        "    print(\"Match:\", match)\n",
+        "\n",
+        "print(\"Match:\", matches)"
+      ],
+      "metadata": {
+        "id": "5rFpG4Yo-u-8",
+        "outputId": "debca91e-81c3-477c-9506-e6c28e9895d2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: Python\n",
+            "Match: is\n",
+            "Match: _awesome_\n",
+            "Match: It\n",
+            "Match: is\n",
+            "Match: 100\n",
+            "Match: perfect\n",
+            "Match: ['Python', 'is', '_awesome_', 'It', 'is', '100', 'perfect']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#29. 백슬래시를 사용하여 특수한 문자 클래스를 생성할 수 있음. 예를 들어, \\d는 숫자를 매치하고, \\s는 공백 문자를 매치, \\w+는 하나 이상의 alphnumeric character including underscores\n",
         "\n",
         "import re\n",
@@ -2743,6 +2974,40 @@
         "outputId": "2e1621bc-8dd1-45a7-94db-d52e75797aa5"
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: 3 Main\n",
+            "Match: 5 Avenue\n",
+            "Match: ['3 Main', '5 Avenue']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"123 Main Street and 5 Avenue \"\n",
+        "pattern = r\"\\d\\s\\w+\"\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)\n",
+        "\n",
+        "print(\"Match:\", matches)"
+      ],
+      "metadata": {
+        "id": "cGvKZD1SADzK",
+        "outputId": "43cd0c93-7c5a-4e9b-a4bb-d3fc2577f432",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
