Colaboratory를 통해 생성됨

--- a/6_DefiningFunctions.ipynb
+++ b/6_DefiningFunctions.ipynb
@@ -69,6 +69,24 @@
     {
       "cell_type": "code",
       "source": [
+        "#a.\n",
+        "def add_txt(t1,t2):\n",
+        "  print (t1 + t2)\n",
+        "\n",
+        "#b\n",
+        "def add_txt(t1, t2):\n",
+        "    result = t1 + t2\n",
+        "    return result"
+      ],
+      "metadata": {
+        "id": "C7v6Klx4FWd_"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#1.b\n",
         "\n",
         "def add_txt(t1, t2):\n",
@@ -106,6 +124,38 @@
     {
       "cell_type": "code",
       "source": [
+        "def add_txt(t1, t2):\n",
+        "    result = t1 + t2\n",
+        "    return result\n",
+        "\n",
+        "text1 = \"Hello, \"\n",
+        "text2 = \"World!\"\n",
+        "\n",
+        "combined_text = add_txt(text1, text2)\n",
+        "\n",
+        "print(combined_text)"
+      ],
+      "metadata": {
+        "id": "Iu4dmBKLFNji",
+        "outputId": "96d043ce-e5b1-42f0-9cea-e76e63b7c30f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, World!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#2 number argument 숫자 인자\n",
         "#a\n",
         "def add_number(n1,n2):\n",
@@ -120,6 +170,24 @@
         "id": "p9_K7wO1bexs"
       },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#a\n",
+        "def add_number(n1,n2):\n",
+        "  print(n1 + n2)\n",
+        "\n",
+        "#b\n",
+        "def add_number(n1,n2):\n",
+        "  result = n1 + n2\n",
+        "  return result"
+      ],
+      "metadata": {
+        "id": "G5Hs6n50FbbN"
+      },
+      "execution_count": 3,
       "outputs": []
     },
     {
