--- a/Untitled54.ipynb
+++ b/Untitled54.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNvjNs1aVp/41Jpc8LCDKLL",
+      "authorship_tag": "ABX9TyNcrvoQJaVEJpt748eUK3sf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,18 +30,18 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "OX_ZsSUnaaNH",
-        "outputId": "058f52cf-d3e3-4cbd-aa19-1d80efb21d9b",
+        "id": "f3Sm9mGIoFYh",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e5df64e3-529b-4fa3-b360-01a19ac9a332"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['a', 'b', 'c']"
+              "2"
             ]
           },
           "metadata": {},
@@ -49,13 +49,8 @@
         }
       ],
       "source": [
-        ">>> a = [1, 2, 3, ['a', 'b', 'c']]\n",
-        "\n",
-        ">>> a[0]\n",
-        "1\n",
-        ">>> a[-1]\n",
-        "['a', 'b', 'c']\n",
-        ">>> a[3]\n",
+        ">>> a = [1, 2, 3, 1]\n",
+        ">>> a.count(1)\n",
         "\n"
       ]
     }
