Colaboratory를 통해 생성됨

--- a/Untitled56.ipynb
+++ b/Untitled56.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMBMZfRb8ap0qBBhxsFS43j",
+      "authorship_tag": "ABX9TyPyO/nABm2pkL58kPJiV9dV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
-        "id": "lV1VTV6ogxnJ"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 144
+        },
+        "id": "PaMlXJqu2Nfx",
+        "outputId": "82af068d-f18e-4048-9db9-991743e91cc4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-85b5192aa497>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    print(\"가라\")\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+          ]
+        }
+      ],
       "source": [
-        ">>> dic = {'name': 'pey', 'phone': '010-9999-1234', 'birth': '1118'}\n",
-        "\n"
+        "# indent_error.py\n",
+        "money = True\n",
+        "if money:\n",
+        "    print(\"택시를\")\n",
+        "print(\"타고\")\n",
+        "    print(\"가라\")\n"
       ]
     }
   ]
