Colaboratory를 통해 생성됨

--- a/8_ReadTxtFilesImportingfrom_html.ipynb
+++ b/8_ReadTxtFilesImportingfrom_html.ipynb
@@ -534,6 +534,22 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "from urllib.request import urlopen\n",
+        "url= 'https://google.com/'\n",
+        "with urlopen(url) as f:\n",
+        "  content = f.read().decode()\n",
+        "  with open('google_html', 'w') as cf:\n",
+        "    cf.write(content)"
+      ],
+      "metadata": {
+        "id": "nihgCZOHIrA1"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## 📙 **Making a directory & uploading files on Colab**\n",
