--- a/Untitled63.ipynb
+++ b/Untitled63.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOrs0+M79JCa/YH31ov3E7w",
+      "authorship_tag": "ABX9TyNnwCogmtYIK52NuhjrwAk/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,15 +30,21 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "v_hGtkCdyl5W"
+        "id": "AZmeoZcvzBEm"
       },
       "outputs": [],
       "source": [
-        ">>> a = {1:'a', 2:'b'}\n",
-        ">>> a[1]\n",
-        "'a'\n",
-        ">>> a[2]\n",
-        "'b'\n"
+        ">>> s1 = set([1, 2, 3])\n",
+        ">>> l1 = list(s1)\n",
+        ">>> l1\n",
+        "[1, 2, 3]\n",
+        ">>> l1[0]\n",
+        "1\n",
+        ">>> t1 = tuple(s1)\n",
+        ">>> t1\n",
+        "(1, 2, 3)\n",
+        ">>> t1[0]\n",
+        "1\n"
       ]
     }
   ]
