--- a/Untitled65.ipynb
+++ b/Untitled65.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPJQlFBWtnCvMyUqS8Jy0MU",
+      "authorship_tag": "ABX9TyMUUrKh+icUpeekHhMVs+Kb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,44 +30,28 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
+        "id": "KxyU5ig9DU9O",
+        "outputId": "2ecfe966-1b69-4b64-9efc-58f28392061c",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 287
-        },
-        "id": "EIpq-i7od1y3",
-        "outputId": "814d9994-0fbe-4818-c42c-f1a3a15dcf24"
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "123\n",
-            "Python\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-af7ec00f1ab2>\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"Python\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mPython\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'Python' is not defined"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2, 'a', 'b')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
         }
       ],
       "source": [
-        ">>> a = 123\n",
-        ">>> print(a)\n",
-        "123\n",
-        ">>> a = \"Python\"\n",
-        ">>> print(a)\n",
-        "Python\n",
-        ">>> a = [1, 2, 3]\n",
-        ">>> print(a)\n",
-        "[1, 2, 3]\n"
+        ">>> t1 = (1, 2, 'a', 'b')\n",
+        ">>> t1[1:]\n",
+        "(2, 'a', 'b')\n"
       ]
     }
   ]
