--- a/10_Tokenization_VariousWays.ipynb
+++ b/10_Tokenization_VariousWays.ipynb
@@ -15,7 +15,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "e04dd7fd7c914c9b9f006c05c73daf03": {
+        "c8be0b0849e04ccca9150b388f579842": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -30,13 +30,13 @@
             "_view_name": "HBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_d5528264da6a4e408a220f062bafc53f",
-              "IPY_MODEL_ebc5c81567a445d9ae5eca0cd450d60a"
+              "IPY_MODEL_59a1f04f7d0f461794258d5aeb177213",
+              "IPY_MODEL_06c85edd6617432a86425bdc76905ce3"
             ],
-            "layout": "IPY_MODEL_e7bc009c66bf40ab952d2415fdcfef51"
+            "layout": "IPY_MODEL_ced74af54ed34eac8ec361a7ec648491"
           }
         },
-        "d5528264da6a4e408a220f062bafc53f": {
+        "59a1f04f7d0f461794258d5aeb177213": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ImageModel",
           "model_module_version": "1.5.0",
@@ -51,11 +51,11 @@
             "_view_name": "ImageView",
             "format": "png",
             "height": "600",
-            "layout": "IPY_MODEL_2722412bbd75427dbe24060f64b50327",
+            "layout": "IPY_MODEL_b156900e594d43a4b9812a80725385b1",
             "width": "700"
           }
         },
-        "ebc5c81567a445d9ae5eca0cd450d60a": {
+        "06c85edd6617432a86425bdc76905ce3": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "VBoxModel",
           "model_module_version": "1.5.0",
@@ -70,14 +70,14 @@
             "_view_name": "VBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_9c80e4bb77d449f1bb906ff9ef9aceaa",
-              "IPY_MODEL_b96e1219e8724f9fbcd0b462b377e2c3",
-              "IPY_MODEL_973003dc807a48478d31414150839a98"
+              "IPY_MODEL_ff990aa4c3a34240b8a15d544e2abf55",
+              "IPY_MODEL_0bb4cab874a546ba8538aeb7fcc3584a",
+              "IPY_MODEL_d6935592405b4ba9b46178728fc99882"
             ],
-            "layout": "IPY_MODEL_3fef0f678cf243358b40338c353be68e"
+            "layout": "IPY_MODEL_7cc06b9d197c498e8d62373202ecfd5a"
           }
         },
-        "e7bc009c66bf40ab952d2415fdcfef51": {
+        "ced74af54ed34eac8ec361a7ec648491": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -129,7 +129,7 @@
             "width": null
           }
         },
-        "2722412bbd75427dbe24060f64b50327": {
+        "b156900e594d43a4b9812a80725385b1": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -181,7 +181,7 @@
             "width": null
           }
         },
-        "9c80e4bb77d449f1bb906ff9ef9aceaa": {
+        "ff990aa4c3a34240b8a15d544e2abf55": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonModel",
           "model_module_version": "1.5.0",
@@ -198,12 +198,12 @@
             "description": "1",
             "disabled": false,
             "icon": "",
-            "layout": "IPY_MODEL_57a58d81c7e6499a801c95e74f338005",
-            "style": "IPY_MODEL_7cbe382b646f47449ff90c7e34eb3056",
+            "layout": "IPY_MODEL_aa8c1f6c0c3545baaaeb3cc57c7f976e",
+            "style": "IPY_MODEL_fd6a2498c5c14cc7955970d144bc96bc",
             "tooltip": ""
           }
         },
-        "b96e1219e8724f9fbcd0b462b377e2c3": {
+        "0bb4cab874a546ba8538aeb7fcc3584a": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonModel",
           "model_module_version": "1.5.0",
@@ -220,12 +220,12 @@
             "description": "2",
             "disabled": false,
             "icon": "",
-            "layout": "IPY_MODEL_57a58d81c7e6499a801c95e74f338005",
-            "style": "IPY_MODEL_20ff12e93e4d4a3c8e56fbbf82629e4a",
+            "layout": "IPY_MODEL_aa8c1f6c0c3545baaaeb3cc57c7f976e",
+            "style": "IPY_MODEL_43218a65f7154e8a9858b5dd6d0a9401",
             "tooltip": ""
           }
         },
-        "973003dc807a48478d31414150839a98": {
+        "d6935592405b4ba9b46178728fc99882": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonModel",
           "model_module_version": "1.5.0",
@@ -242,12 +242,12 @@
             "description": "3",
             "disabled": false,
             "icon": "",
-            "layout": "IPY_MODEL_57a58d81c7e6499a801c95e74f338005",
-            "style": "IPY_MODEL_cae8d989d35b47808101da8ba17f8675",
+            "layout": "IPY_MODEL_aa8c1f6c0c3545baaaeb3cc57c7f976e",
+            "style": "IPY_MODEL_a8ee5a3d2923448599b1fd6bca43b4ce",
             "tooltip": ""
           }
         },
-        "3fef0f678cf243358b40338c353be68e": {
+        "7cc06b9d197c498e8d62373202ecfd5a": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -299,7 +299,7 @@
             "width": null
           }
         },
-        "57a58d81c7e6499a801c95e74f338005": {
+        "aa8c1f6c0c3545baaaeb3cc57c7f976e": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -351,7 +351,7 @@
             "width": "50px"
           }
         },
-        "7cbe382b646f47449ff90c7e34eb3056": {
+        "fd6a2498c5c14cc7955970d144bc96bc": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonStyleModel",
           "model_module_version": "1.5.0",
@@ -367,7 +367,7 @@
             "font_weight": ""
           }
         },
-        "20ff12e93e4d4a3c8e56fbbf82629e4a": {
+        "43218a65f7154e8a9858b5dd6d0a9401": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonStyleModel",
           "model_module_version": "1.5.0",
@@ -383,7 +383,7 @@
             "font_weight": ""
           }
         },
-        "cae8d989d35b47808101da8ba17f8675": {
+        "a8ee5a3d2923448599b1fd6bca43b4ce": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonStyleModel",
           "model_module_version": "1.5.0",
@@ -442,28 +442,28 @@
       ],
       "metadata": {
         "id": "Tj8kdbQDwcn3",
-        "outputId": "5d372e03-395e-4a14-b2e2-7d0112c63707",
+        "outputId": "829e8150-aac4-4050-9483-88ae2869fc9b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 416,
           "referenced_widgets": [
-            "e04dd7fd7c914c9b9f006c05c73daf03",
-            "d5528264da6a4e408a220f062bafc53f",
-            "ebc5c81567a445d9ae5eca0cd450d60a",
-            "e7bc009c66bf40ab952d2415fdcfef51",
-            "2722412bbd75427dbe24060f64b50327",
-            "9c80e4bb77d449f1bb906ff9ef9aceaa",
-            "b96e1219e8724f9fbcd0b462b377e2c3",
-            "973003dc807a48478d31414150839a98",
-            "3fef0f678cf243358b40338c353be68e",
-            "57a58d81c7e6499a801c95e74f338005",
-            "7cbe382b646f47449ff90c7e34eb3056",
-            "20ff12e93e4d4a3c8e56fbbf82629e4a",
-            "cae8d989d35b47808101da8ba17f8675"
+            "c8be0b0849e04ccca9150b388f579842",
+            "59a1f04f7d0f461794258d5aeb177213",
+            "06c85edd6617432a86425bdc76905ce3",
+            "ced74af54ed34eac8ec361a7ec648491",
+            "b156900e594d43a4b9812a80725385b1",
+            "ff990aa4c3a34240b8a15d544e2abf55",
+            "0bb4cab874a546ba8538aeb7fcc3584a",
+            "d6935592405b4ba9b46178728fc99882",
+            "7cc06b9d197c498e8d62373202ecfd5a",
+            "aa8c1f6c0c3545baaaeb3cc57c7f976e",
+            "fd6a2498c5c14cc7955970d144bc96bc",
+            "43218a65f7154e8a9858b5dd6d0a9401",
+            "a8ee5a3d2923448599b1fd6bca43b4ce"
           ]
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
@@ -474,7 +474,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "e04dd7fd7c914c9b9f006c05c73daf03"
+              "model_id": "c8be0b0849e04ccca9150b388f579842"
             }
           },
           "metadata": {}
@@ -628,10 +628,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "qWcgp3AzSyi4",
-        "outputId": "275b0245-74a1-4e5a-d816-1cd357a2b175",
+        "outputId": "3f5d9364-1240-40b9-e474-6745b673fa17",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -641,12 +641,11 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: nltk in /usr/local/lib/python3.10/dist-packages (3.8.1)\n",
-            "Requirement already satisfied: click in /usr/local/lib/python3.10/dist-packages (from nltk) (8.1.3)\n",
-            "Requirement already satisfied: joblib in /usr/local/lib/python3.10/dist-packages (from nltk) (1.2.0)\n",
-            "Requirement already satisfied: regex>=2021.8.3 in /usr/local/lib/python3.10/dist-packages (from nltk) (2022.10.31)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from nltk) (4.65.0)\n"
+            "Requirement already satisfied: click in /usr/local/lib/python3.10/dist-packages (from nltk) (8.1.7)\n",
+            "Requirement already satisfied: joblib in /usr/local/lib/python3.10/dist-packages (from nltk) (1.3.2)\n",
+            "Requirement already satisfied: regex>=2021.8.3 in /usr/local/lib/python3.10/dist-packages (from nltk) (2023.6.3)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from nltk) (4.66.1)\n"
           ]
         },
         {
@@ -665,7 +664,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 2
         }
       ],
       "source": [
@@ -674,6 +673,53 @@
         "!pip install nltk\n",
         "import nltk\n",
         "nltk.download('punkt')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install nltk\n",
+        "import nltk\n",
+        "nltk.download('punkt')"
+      ],
+      "metadata": {
+        "id": "EfagkfRfH7CD",
+        "outputId": "1eab01fd-d5ee-4327-9959-ac00c8df0a44",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: nltk in /usr/local/lib/python3.10/dist-packages (3.8.1)\n",
+            "Requirement already satisfied: click in /usr/local/lib/python3.10/dist-packages (from nltk) (8.1.7)\n",
+            "Requirement already satisfied: joblib in /usr/local/lib/python3.10/dist-packages (from nltk) (1.3.2)\n",
+            "Requirement already satisfied: regex>=2021.8.3 in /usr/local/lib/python3.10/dist-packages (from nltk) (2023.6.3)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from nltk) (4.66.1)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
       ]
     },
     {
@@ -696,12 +742,12 @@
       ],
       "metadata": {
         "id": "kv8s_PN-OlG_",
-        "outputId": "691299cf-2858-4277-ea59-27f2b64e8718",
+        "outputId": "7d070d8c-f669-45d5-9e6d-ea9d2824d521",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -711,6 +757,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from nltk.tokenize import sent_tokenize\n"
+      ],
+      "metadata": {
+        "id": "vHnJe6fjIXt6"
+      },
+      "execution_count": 6,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -838,6 +895,17 @@
     {
       "cell_type": "code",
       "source": [
+        "text=open('/content/sample_data/text_symbol_sample.txt','rt')"
+      ],
+      "metadata": {
+        "id": "i_xkTDCQLG-9"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@markdown 👀🐾 **temp variable assigned text being read**\n",
         "\n",
         "temp = text.read()\n",
@@ -845,12 +913,42 @@
       ],
       "metadata": {
         "id": "IzJ3YrUeGlgk",
-        "outputId": "0946a8d1-c051-4879-8977-92cb0e7c1618",
+        "outputId": "923c9fc9-2621-46dd-d19b-151ba11b80f0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Here’s to the crazy ones, the misfits, the rebels, the troublemakers, the round pegs in the square holes.\n",
+            "The ones who see things differently — they’re not fond of rules. \n",
+            "I wanted to pay with a twenti-dolloar bill; \n",
+            "however, she couldn’t get cash. \n",
+            "I’ve got a big trouble, but other people were having lots of fun. \n",
+            "Anna likes Brown’s East back pack,\n",
+            "but her brother doesn’t.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "temp = text.read()\n",
+        "print(temp)"
+      ],
+      "metadata": {
+        "id": "oS0CuMs2LZF4",
+        "outputId": "61c89f26-dda0-425a-f9d8-852c4d83ae54",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -879,6 +977,30 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "obj=temp.replace(\"\\n\",\" \")\n",
+        "print(obj)"
+      ],
+      "metadata": {
+        "id": "qL9qKckaMEDC",
+        "outputId": "5dd718e7-483f-4460-e16e-215185f6f9ea",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Here’s to the crazy ones, the misfits, the rebels, the troublemakers, the round pegs in the square holes. The ones who see things differently — they’re not fond of rules.  I wanted to pay with a twenti-dolloar bill;  however, she couldn’t get cash.  I’ve got a big trouble, but other people were having lots of fun.  Anna likes Brown’s East back pack, but her brother doesn’t.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -992,6 +1114,97 @@
           },
           "metadata": {},
           "execution_count": 86
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "obj.split()"
+      ],
+      "metadata": {
+        "id": "RGaYZ2TlM_cg",
+        "outputId": "6c2441f9-cc71-4f89-9d95-cd5355786cfa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Here’s',\n",
+              " 'to',\n",
+              " 'the',\n",
+              " 'crazy',\n",
+              " 'ones,',\n",
+              " 'the',\n",
+              " 'misfits,',\n",
+              " 'the',\n",
+              " 'rebels,',\n",
+              " 'the',\n",
+              " 'troublemakers,',\n",
+              " 'the',\n",
+              " 'round',\n",
+              " 'pegs',\n",
+              " 'in',\n",
+              " 'the',\n",
+              " 'square',\n",
+              " 'holes.',\n",
+              " 'The',\n",
+              " 'ones',\n",
+              " 'who',\n",
+              " 'see',\n",
+              " 'things',\n",
+              " 'differently',\n",
+              " '—',\n",
+              " 'they’re',\n",
+              " 'not',\n",
+              " 'fond',\n",
+              " 'of',\n",
+              " 'rules.',\n",
+              " 'I',\n",
+              " 'wanted',\n",
+              " 'to',\n",
+              " 'pay',\n",
+              " 'with',\n",
+              " 'a',\n",
+              " 'twenti-dolloar',\n",
+              " 'bill;',\n",
+              " 'however,',\n",
+              " 'she',\n",
+              " 'couldn’t',\n",
+              " 'get',\n",
+              " 'cash.',\n",
+              " 'I’ve',\n",
+              " 'got',\n",
+              " 'a',\n",
+              " 'big',\n",
+              " 'trouble,',\n",
+              " 'but',\n",
+              " 'other',\n",
+              " 'people',\n",
+              " 'were',\n",
+              " 'having',\n",
+              " 'lots',\n",
+              " 'of',\n",
+              " 'fun.',\n",
+              " 'Anna',\n",
+              " 'likes',\n",
+              " 'Brown’s',\n",
+              " 'East',\n",
+              " 'back',\n",
+              " 'pack,',\n",
+              " 'but',\n",
+              " 'her',\n",
+              " 'brother',\n",
+              " 'doesn’t.']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
         }
       ]
     },
