--- a/Untitled65.ipynb
+++ b/Untitled65.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPcIIfubEhCXBrC3eMsdG43",
+      "authorship_tag": "ABX9TyMAMTnt5HSQ+YZbhJLm7LDM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,22 +28,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "BCURPtfIY5Oo"
+        "id": "1_pjbTs4MVPL"
       },
       "outputs": [],
       "source": [
-        ">>> a = 3\n",
-        ">>> b = 4\n",
-        ">>> a + b\n",
-        "7\n",
-        ">>> a - b\n",
-        "-1\n",
-        ">>> a * b\n",
-        "12\n",
-        ">>> a / b\n",
-        "0.75\n"
+        ">>> prompt = \"\"\"\n",
+        "... 1. Add\n",
+        "... 2. Del\n",
+        "... 3. List\n",
+        "... 4. Quit\n",
+        "...\n",
+        "... Enter number: \"\"\"\n",
+        ">>>\n"
       ]
     }
   ]
